testsuite/tests/properties/invalid_final/final_lazy_field.lkt
from lexer_example import foo_lexer

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ExampleNode(@Example)
}

@abstract class FooNode implements Node[FooNode] {
}

class ExampleNode : FooNode implements TokenNode {
    @exported @final @lazy f: Bool = true
}
